# Proyecto_Biblioteca

./: AdministrarAlmacenamiento.cpp  AdministrarAlmacenamiento.h  Biblioteca.cpp  Biblioteca.h  CMakeLists.txt  Excepciones.cpp  Excepciones.h  GestorMateriales.cpp  GestorMateriales.h  GestorPrestamos.cpp  GestorPrestamos.h  GestorUsuario.cpp  GestorUsuario.h  Lista.h  Menu.cpp  Menu.h  Nodo.h  Prestamo.cpp  Prestamo.h  README.md  Usuario.cpp  Usuario.h  Utilities.h  main.cpp
Materiales/: Articulo.cpp  Articulo.h  Libro.cpp  Libro.h  Material.cpp  Material.h  MaterialDigitalFormatoDigital.cpp  MaterialDigitalFormatoDigital.h  MaterialDigitalFormatoFisico.cpp  MaterialDigitalFormatoFisico.h  Revista.cpp  Revista.h  Video.cpp  Video.h  materialDigital.cpp  materialDigital.h
